# ipyblender-experimental

./: .gitignore  404.html  README.md  animation.ipynb  animation_minimal.ipynb  animation_torus.ipynb  blood_export.ipynb  blood_interactive.ipynb  blood_vessle.ipynb  color_single_mesh_broken_depth.blend  cube_with_place_points.blend  donut.ipynb  em-node.ipynb  example.ipynb  example_interactive.ipynb  geo_nodes_setup.ipynb  geonode_raindrop.blend  geonodes_connecting_two spheres.ipynb  hello.ipynb  index.html  mkdocs.yml  n1a_minimal_example.ipynb  n1a_objects.ipynb  n1b_pipe_data_Deno.ipynb  n1b_transparent_render.ipynb  n1c_orange_torus.ipynb  n1c_pipe_data.ipynb  n1c_pipe_dino.ipynb  n1d_add_objects.ipynb  n1e_point_camera_to_center.ipynb  n2_deno_pipe_data.ipynb  n2a_animation_minimal.ipynb  n3.ipynb  n3_points_from_dict.ipynb  n3a_geo_nodes_setup_minimal.ipynb  n3b_geo_nodes_connecting_two spheres.ipynb  n3c_color_single_mesh_satyrn_.ipynb  n3c_create_a_simple_network.blend  n3c_create_a_simple_network.ipynb  n3c_group.ipynb  (+31 more)
TODO/: n3c_create_a_simple_network.blend  n3d_color_edge_to_face_brady.ipynb
california_housing/: a_df.csv  b_reference_frame.csv  blender.ipynb  california_housing.ipynb  housing_data.blend  prepare_data.ipynb
current/: n3_points_from_dict.ipynb  n3c_satyrn_roate_camera_change_color.ipynb  n4a_loading_blood_vessle.ipynb
docs/: cube_gn_attibute.blend  cube_gn_attribute.blend  cube_gn_position.blend  index.md  n0getting_started.md  n1objects.ipynb  n2data_simple.ipynb  n3data.ipynb  n3data_attributes.ipynb  n4packages.ipynb  scene.blend
further_ideas/: donut.ipynb  export_glb_cube.ipynb  export_glb_cube_minimal.ipynb  export_glb_torus.ipynb  minimal_example.ipynb  without_anywidget.ipynb
ideas/: n1x_transparent_render.ipynb  n2b_animation_torus.ipynb
js/: styles.css  widget.jsx  widget2.jsx
marimo_blender/: bpy_dna.ipynb  dna.blend  dna_bpy.py  dna_bpy_develop_version.py  dna_pby.py  marimo_monkey.py
n0getting_started/: index.html
n2data_simple/: index.html
n3data_attributes/: index.html
n4packages/: index.html
networkx/: n3c_create_a_simple_network.blend  n3c_create_a_simple_network.ipynb
search/: search_index.json
(+10 files in other folders)
